# CareerFit-Agent-Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: config.py
app/evaluation/: __init__.py  artifact_writer.py  benchmark_runner.py  comparison_runner.py  extraction_runner.py  multimodal_runner.py  recommendation_runner.py  utils.py
app/llm/: __init__.py  advisory.py  base.py  config.py  errors.py  extraction.py  prompts.py  providers.py  validators.py
app/schemas/: career.py  common.py  comparison.py  document.py  generation.py  jd.py  llm_extraction.py  llm_generation.py  match.py  parse.py  resume.py  workflow.py
app/services/: adaptation_service.py  candidate_profile_service.py  comparison_service.py  extraction_service.py  fit_label.py  matching_service.py  opportunity_comparison_service.py  orchestration_service.py  parse_service.py  retrieval_service.py  semantic_matching_service.py  text_normalizer.py  tokenization.py  (+1 more)
dataset/: clean_dataset.py  cleaning_report.json
docs/: AGENT.md  API_WALKTHROUGH.md  ARCHITECTURE.md  CAREER_API.md  CODE_REVIEW.md  COMPARISON_API.md  CURRENT_STATE_AUDIT.md  DECISIONS.md  DEMO_GUIDE.md  DEPLOYMENT.md  EVALUATION.md  GENERATION_API.md  PARSE_API.md  PLAN.md  PR_CONVENTIONS.md  ROADMAP.md  SKILL_CareerFit_Neat_Execution.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
tests/: conftest.py
(+2669 files in other folders)
