[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "careerfit-agent"
version = "0.1.0"
description = "Deterministic backend MVP for explainable resume to JD matching."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "pydantic>=2.7,<3.0",
  "pypdf>=6.10,<7.0",
  "python-docx>=1.2,<2.0",
  "python-multipart>=0.0.20,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
